--- a/kubernetes/src/main/resources/kubernetes/kubernetes-dashboard.yaml
+++ b/kubernetes/src/main/resources/kubernetes/kubernetes-dashboard.yaml
@@ -3,7 +3,7 @@ apiVersion: extensions/v1beta1
 metadata:
   labels:
     app: kubernetes-dashboard
-    version: v1.4.0-beta1
+    version: v1.4.0
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: kubernetes-dashboard
-        image: gcr.io/google_containers/kubernetes-dashboard-amd64:v1.4.0-beta1
+        image: gcr.io/google_containers/kubernetes-dashboard-amd64:v1.4.0
         imagePullPolicy: Always
         ports:
         - containerPort: 9090
