--- a/kubernetes/src/main/resources/kubernetes/policy-controller.yaml
+++ b/kubernetes/src/main/resources/kubernetes/policy-controller.yaml
@@ -4,19 +4,21 @@ metadata:
   name: policy-controller
   namespace: calico-system
   labels:
-    version: "latest"
+    version: "v0.3.0"
     projectcalico.org/app: "policy-controller"
 spec:
   hostNetwork: true
   containers:
     - name: policy-controller
-      image: calico/kube-policy-controller:latest
+      image: calico/kube-policy-controller:v0.3.0
       env:
         - name: ETCD_ENDPOINTS
           value: "${config['template.substitutions']['etcd_endpoints']}"
         - name: K8S_API
           value: "${config['template.substitutions']['kubernetes_url']}"
         - name: LEADER_ELECTION
+          value: "true"
+        - name: CONFIGURE_ETC_HOSTS
           value: "true"
     - name: leader-elector
       image: quay.io/calico/leader-elector:v0.1.0
@@ -25,3 +27,10 @@ spec:
         - "--election=calico-policy-election"
         - "--election-namespace=calico-system"
         - "--http=127.0.0.1:4040"
+      volumeMounts:
+        - mountPath: "/kubeconfig"
+          name: kubeconfig
+  volumes:
+    - name: kubeconfig
+      hostPath:
+        path: "/etc/kubernetes/kubeconfig"
