--- a/kubernetes/src/main/examples/kubernetes.yaml
+++ b/kubernetes/src/main/examples/kubernetes.yaml
@@ -30,6 +30,8 @@ services:
       kubernetes.scaling.cpu.limit: 0.80
       kubernetes.recovery.stabilizationDelay: 10s
       kubernetes.recovery.failOnRecurringFailuresInThisDuration: 5m
+      docker.recovery.stabilizationDelay: 10s
+      docker.recovery.failOnRecurringFailuresInThisDuration: 5m
       flannel.network: 10.254.0.0/16
       provisioning.properties:
         minRam: 8g
