--- a/kubernetes/src/main/resources/kubernetes/policy-controller.yaml
+++ b/kubernetes/src/main/resources/kubernetes/policy-controller.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: policy-controller
-  namespace: calico-system
+  namespace: kube-system
   labels:
     version: "v0.3.0"
     projectcalico.org/app: "policy-controller"
