--- a/kubernetes/src/main/resources/kubernetes/prometheus.yaml
+++ b/kubernetes/src/main/resources/kubernetes/prometheus.yaml
@@ -81,33 +81,36 @@ data:
       - job_name: 'kubernetes-cluster'
         kubernetes_sd_configs:
           - api_servers:
-              - https://kubernetes.default.svc
-              # ${config['template.substitutions']['kubernetes_url']}
+              - ${config['template.substitutions']['kubernetes_url']}
             basic_auth:
               username: prometheus
               password: pr0m3th3us
-            in_cluster: true
             role: apiserver
       - job_name: 'kubernetes-nodes'
         kubernetes_sd_configs:
           - api_servers:
-              - https://kubernetes.default.svc
+              - ${config['template.substitutions']['kubernetes_url']}
             basic_auth:
               username: prometheus
               password: pr0m3th3us
-            in_cluster: true
             role: node
         relabel_configs:
           - action: labelmap
             regex: __meta_kubernetes_node_label_(.+)
+          - source_labels: [__meta_kubernetes_role]
+            action: replace
+            target_label: kubernetes_role
+          - source_labels: [__address__]
+            regex: (.*):10250
+            replacement: ${r"${1}:10255"}
+            target_label: __address__
       - job_name: 'kubernetes-service-endpoints'
         kubernetes_sd_configs:
           - api_servers:
-              - https://kubernetes.default.svc
+              - ${config['template.substitutions']['kubernetes_url']}
             basic_auth:
               username: prometheus
               password: pr0m3th3us
-            in_cluster: true
             role: endpoint
         relabel_configs:
           - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
@@ -134,61 +137,3 @@ data:
           - source_labels: [__meta_kubernetes_service_name]
             action: replace
             target_label: kubernetes_name
-      - job_name: 'kubernetes-services'
-        metrics_path: /probe
-        params:
-          module: [http_2xx]
-        kubernetes_sd_configs:
-          - api_servers:
-              - https://kubernetes.default.svc
-            basic_auth:
-              username: prometheus
-              password: pr0m3th3us
-            in_cluster: true
-            role: service
-        relabel_configs:
-          - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_probe]
-            action: keep
-            regex: true
-          - source_labels: [__address__]
-            target_label: __param_target
-          - target_label: __address__
-            replacement: blackbox
-          - source_labels: [__param_target]
-            target_label: instance
-          - action: labelmap
-            regex: __meta_kubernetes_service_label_(.+)
-          - source_labels: [__meta_kubernetes_service_namespace]
-            target_label: kubernetes_namespace
-          - source_labels: [__meta_kubernetes_service_name]
-            target_label: kubernetes_name
-      - job_name: 'kubernetes-pods'
-        kubernetes_sd_configs:
-          - api_servers:
-              - https://kubernetes.default.svc
-            basic_auth:
-              username: prometheus
-              password: pr0m3th3us
-            in_cluster: true
-            role: pod
-        relabel_configs:
-          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
-            action: keep
-            regex: true
-          - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
-            action: replace
-            target_label: __metrics_path__
-            regex: (.+)
-          - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
-            action: replace
-            regex: (.+):(?:\d+);(\d+)
-            replacement: ${r"${1}:${2}"}
-            target_label: __address__
-          - action: labelmap
-            regex: __meta_kubernetes_pod_label_(.+)
-          - source_labels: [__meta_kubernetes_pod_namespace]
-            action: replace
-            target_label: kubernetes_namespace
-          - source_labels: [__meta_kubernetes_pod_name]
-            action: replace
-            target_label: kubernetes_pod_name
