--- a/kubernetes/src/main/examples/kubernetes.yaml
+++ b/kubernetes/src/main/examples/kubernetes.yaml
@@ -25,6 +25,7 @@ services:
       kubernetes.debug: true
       kubernetes.version: 1.4.0
       start.timeout: 30m
+      kubernetes.master.size: 2
       kubernetes.initial.size: 4
       kubernetes.max.size: 16
       etcd.initial.size: 3
