--- a/kubernetes/src/main/resources/kubernetes/prometheus.yaml
+++ b/kubernetes/src/main/resources/kubernetes/prometheus.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    prometheus.io/scrape: 'true'
-  labels:
-    name: prometheus
   name: prometheus
   namespace: kube-system
+  labels:
+    app: prometheus
+    name: prometheus-service
+  annotations:
+    prometheus.io/scrape: 'true'
 spec:
   selector:
     app: prometheus
@@ -20,10 +21,11 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  labels:
-    name: prometheus-deployment
   name: prometheus
   namespace: kube-system
+  labels:
+    app: prometheus
+    name: prometheus-deployment
 spec:
   replicas: 1
   template:
