--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.brooklyn.clocker</groupId>
     <artifactId>clocker-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.0-SNAPSHOT</version> <!-- CLOCKER_VERSION -->
+    <version>2.1.0-SNAPHSOT</version> <!-- CLOCKER_VERSION -->
 
     <name>Clocker</name>
     <description>Clocker</description>
